# remote_display

./: .gitignore  Makefile.am  Makefile.in  README.md  RemoteDisplayManager.cpp  RemoteDisplayManager.h  RemoteDisplayManagerTest.cpp  config.h  config.h.in  config.status  configure  configure.ac  makefile  manager_test  remotedisplay
.deps/: RemoteDisplay.Po  RemoteDisplayManager.Po  RemoteDisplayManagerTest.Po  TransmissionClientNet.Po  TransmissionServerNet.Po
RemoteDisplay/: RemoteDisplay.cpp  RemoteDisplay.h
Transmission/Client/: ClientTest.cpp  TransmissionClient.cpp  TransmissionClient.h  makefile
Transmission/Server/: ServerTest.cpp  TransmissionServer.cpp  TransmissionServer.h  makefile
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: RemoteDisplay.h  RemoteDisplayManager.h  TransmissionClient.h  TransmissionClientInterface.h  TransmissionClientNet.h  TransmissionCommon.h  TransmissionServer.h  TransmissionServerInterface.h  TransmissionServerNet.h
src/: RemoteDisplay.cpp  RemoteDisplayManager.cpp  RemoteDisplayManagerTest.cpp  TransmissionClient.cpp  TransmissionClientNet.cpp  TransmissionServer.cpp  TransmissionServerNet.cpp
src/.deps/: RemoteDisplay.Po  RemoteDisplayManager.Po  RemoteDisplayManagerTest.Po  TransmissionClientNet.Po  TransmissionServerNet.Po
